# FastAPIProject-Template-

./: Dockerfile  LICENSE  Makefile  README.md  alembic.ini  docker-compose.yml  pre-commit-config.yaml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  format-check.yml  lint.yml  tests.yml  typecheck.yml
alembic/: README.md
app/: README.md  main.py
app/api/: README.md
app/api/v1/: README.md  router.py
app/api/v1/endpoints/: README.md  health.py  users.py
app/auth/: README.md  deps.py
app/core/: README.md  config.py  loggings.py  security.py
app/db/: README.md  base.py  init_db.py  session.py
app/dependencies/: README.md  db.py
app/middlewares/: README.md  timing.py
app/models/: README.md  user.py
app/repositories/: README.md  user_repository.py
app/schemas/: README.md  user.py
app/services/: README.md  user_service.py
app/tests/: README.md  test_health.py
scripts/: README.md  lint.sh
